Resolved locations of css two menus. About to try changing proportions for list box size on mobile.

--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100vh;
+  /* border: black dotted 5pt; */
 }
 
 .uberbox {
@@ -25,10 +26,11 @@
   box-shadow: 1.5px 1.5px 10px black;
   overflow: hidden;
   width: var(--main-width);
-  min-width: 450px;
+  min-width: var(--main-width);
   /* background-color: aqua; */
   align-self: center;
-  margin-top: 0px;
+  height: 80%;
+  /* height: 90%; */
 }
 
 .bigwordbox {
@@ -42,7 +44,7 @@
 
 .bigtextbox {
   display: flex;
-  height: 100%;
+  height: 180px;
   flex-direction: column;
   justify-content: center;
   word-wrap: break-word;
@@ -90,13 +92,14 @@
 }
 
 .listContainer {
-  height: 300px;
+  height: 48vh;
   display: flex;
   flex-direction: row;
+  border: blue dotted 1pt;
 }
 
 .list {
-  height: 100%;
+  /* height: 100%; */
   width: 50%;
   text-align: center;
   font-size: 19px;
@@ -218,4 +221,35 @@
   width: 80%;
   height: 100%;
   position: fixed;
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
+  .configButton {
+    pointer-events: none;
+    background-color: lightgray;
+    color: darkgray;
+  }
+
+  :root {
+    --main-width: 90%;
+  }
+
+  .uberbox {
+    position: relative;
+    top: 5px;
+  }
+
+  .littleButton {
+    width: 70px;
+    font-size: 12px;
+  }
+
+  /* .grossuberbox {
+    background-color: lightcyan;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    width: 50px;
+  } */
 }
