--- a/src/css/ConfigMenu.module.css
+++ b/src/css/ConfigMenu.module.css
@@ -4,7 +4,7 @@
   width: 420px;
   position: fixed;
   align-self: center;
-  top: 75px;
+  top: 55px;
   z-index: 2;
   background-color: yellow;
   border-radius: 10pt;
